[tool.poetry]
name = "snippets"
version = "0.1.0"
description = "Code snippets used on https://geniepy.com"
authors = ["Siddhant Goel <me@geniepy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Authlib = "^1.3.0"
starlette = "^0.35.1"
strawberry-graphql = "^0.219.1"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
