[tool.poetry]
name = "snippets"
version = "0.1.0"
description = "Code snippets used on https://geniepy.com"
authors = ["Siddhant Goel <me@geniepy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Authlib = "^1.3.0"
starlette = "^0.37.2"
strawberry-graphql = "^0.232.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
